--- a/static/assets_spa/index.html
+++ b/static/assets_spa/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <title>Title</title>
-<link href="app/client_spa.adeab362.css" rel="stylesheet"></head>
+<link href="app/client_spa.204c45ea.css" rel="stylesheet"></head>
 <body>
 
 <div id="mainBody">
     <router-view></router-view>
 </div>
 
-<script src="/static/lib/vue-2.3.0/vue.min.js"></script>
+<script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
 
-<script type="text/javascript" src="app/client_spa.adeab362.js"></script></body>
+<script type="text/javascript" src="app/client_spa.204c45ea.js"></script></body>
 </html>
