--- a/client_spa/src/index.html
+++ b/client_spa/src/index.html
@@ -12,7 +12,7 @@
     <router-view></router-view>
 </div>
 
-<script src="/static/lib/vue-2.3.0/vue.min.js"></script>
+<script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
 
 </body>
