--- a/client/src/kaihe/index.html
+++ b/client/src/kaihe/index.html
@@ -5,13 +5,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="manBody">
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-    </div>
+
+
+<div id="mainBody">
+    <router-view></router-view>
+</div>
+
+<script src="/static/lib/vue-2.3.0/vue.js"></script>
+<script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
+
 </body>
 </html>
