--- a/client/src/ubibi/index.html
+++ b/client/src/ubibi/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <title>Title</title>
+    <title>Ubibi</title>
 </head>
 <body>
 
