--- a/static/assets/kaihe/index.html
+++ b/static/assets/kaihe/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-<link href="app/kaihe.51a0ceec.css" rel="stylesheet"></head>
+<link href="/static/assets/kaihe/app/kaihe.63e183e3.css" rel="stylesheet"></head>
 <body>
-    <div id="manBody">
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-        <div>afdsaf</div>
-    </div>
-<script type="text/javascript" src="app/kaihe.51a0ceec.js"></script></body>
+
+
+<div id="mainBody">
+    <router-view></router-view>
+</div>
+
+<script src="/static/lib/vue-2.3.0/vue.js"></script>
+<script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
+
+<script type="text/javascript" src="/static/assets/kaihe/app/kaihe.63e183e3.js"></script></body>
 </html>
