--- a/static/assets/ubibi/index.html
+++ b/static/assets/ubibi/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <title>Title</title>
-<link href="app/client_spa.c8a25f59.css" rel="stylesheet"></head>
+<link href="app/ubibi.ef8dd5b5.css" rel="stylesheet"></head>
 <body>
 
 <div id="mainBody">
@@ -15,5 +15,5 @@
 <script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
 
-<script type="text/javascript" src="app/client_spa.c8a25f59.js"></script></body>
+<script type="text/javascript" src="app/ubibi.ef8dd5b5.js"></script></body>
 </html>
