--- a/static/assets/ubibi/index.html
+++ b/static/assets/ubibi/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <title>Title</title>
-<link href="app/ubibi.ef8dd5b5.css" rel="stylesheet"></head>
+    <title>Ubibi</title>
+<link href="/static/assets/ubibi/app/ubibi.67be9482.css" rel="stylesheet"></head>
 <body>
-
+<ubibi_server_vars></ubibi_server_vars>
 <div id="mainBody">
     <router-view></router-view>
 </div>
-
 <script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
 
-<script type="text/javascript" src="app/ubibi.ef8dd5b5.js"></script></body>
+<script type="text/javascript" src="/static/assets/ubibi/app/ubibi.67be9482.js"></script></body>
 </html>
