--- a/client/src/ubibi/index.html
+++ b/client/src/ubibi/index.html
@@ -13,6 +13,9 @@
 </div>
 <script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
+<script src="/static/lib/underscore/underscore.min.js"></script>
+<script src="/static/lib/marked/marked.min.js"></script>
+<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
 
 </body>
 </html>
