--- a/client/src/ubibi/index.html
+++ b/client/src/ubibi/index.html
@@ -9,7 +9,7 @@
 <body>
 <ubibi_server_vars></ubibi_server_vars>
 <div id="mainBody">
-    <router-view></router-view>
+    <router-view/>
 </div>
 <script src="/static/lib/vue-2.3.0/vue.js"></script>
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
