--- a/client/src/ubibi/index.html
+++ b/client/src/ubibi/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=9" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Ubibi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 <script src="/static/lib/vue-router-2.7.0/dist/vue-router.min.js"></script>
 <script src="/static/lib/underscore/underscore.min.js"></script>
 <script src="/static/lib/marked/marked.min.js"></script>
-<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
+<script src="//gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
 
 </body>
 </html>
