--- a/static/assets/ubibi/index.html
+++ b/static/assets/ubibi/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8"/>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Ubibi</title>
-<link href="/static/assets/ubibi/app/ubibi.df31abee.css" rel="stylesheet"></head>
+<link href="/static/assets/ubibi/app/ubibi.7ed1f3ab.css" rel="stylesheet"></head>
 <body>
 <ubibi_server_vars></ubibi_server_vars>
 <div id="mainBody">
@@ -17,5 +17,5 @@
 <script src="/static/lib/marked/marked.min.js"></script>
 <script src="//gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
 
-<script type="text/javascript" src="/static/assets/ubibi/app/ubibi.df31abee.js"></script></body>
+<script type="text/javascript" src="/static/assets/ubibi/app/ubibi.7ed1f3ab.js"></script></body>
 </html>
