--- a/static/pages/monsterhunt/index.html
+++ b/static/pages/monsterhunt/index.html
@@ -257,6 +257,8 @@
         联系作者 BeeChat捉妖记交流群：萌犬骑士
     </div>
 
+    <img src="/static/images/uis/qishi.jpg" alt="" style="display: block;margin:  0 auto">
+
 </div>
 
 <script src="/static/lib/vue-2.3.0/vue.min.js"></script>
