--- a/static/pages/monsterhunt/index.html
+++ b/static/pages/monsterhunt/index.html
@@ -20,7 +20,7 @@
 
         .page_title {
             text-align: center;
-            margin: 30px;
+            margin: 10px;
             font-size: 20px;
         }
 
@@ -89,6 +89,13 @@
 
         .title21{
             float: left;
+            min-height: 22px;
+            line-height: 22px;
+        }
+        .title212{
+            min-height: 22px;
+            line-height: 22px;
+            width: 80px;
         }
 
         .title211{
@@ -105,10 +112,10 @@
         .section{
             width: 95%;
             max-width: 500px;
-            padding: 20px;
+            padding: 10px;
             border-radius: 3px;
             background-color: #ffffff;
-            margin: 20px auto;
+            margin: 10px auto;
         }
 
         .section_title{
@@ -117,7 +124,8 @@
         }
 
         .section_content{
-            padding: 20px 0;
+            padding-top: 10px;
+            /*padding: 20px 0;*/
         }
 
         #mainBody{
@@ -165,13 +173,9 @@
         <div class="section_content">
             <div class="title0">
                 <div class="title2">种类</div>
-                <div class="title21">
+                <div class="title21 title212" >
                     {{m | race_display}}
                 </div>
-                <div class="clear"></div>
-            </div>
-
-            <div class="title0">
                 <div class="title2">代数</div>
                 <div class="title21">
                     {{m.generation}}
@@ -179,21 +183,26 @@
                 <div class="clear"></div>
             </div>
 
+            <div class="title0">
+                <div class="clear"></div>
+            </div>
+
 
             <div class="title0">
                 <div class="title2">天赋</div>
-                <div class="title21">
+                <div class="title21 title212" >
                     {{m.talent | talent}}
+                </div>
+                <div class="title2">总属性</div>
+                <div class="title21">
+                    {{m | totalGenis}}
                 </div>
                 <div class="clear"></div>
             </div>
 
 
             <div class="title0">
-                <div class="title2">总属性</div>
-                <div class="title21">
-                    {{m | totalGenis}}
-                </div>
+
                 <div class="clear"></div>
             </div>
 
