--- a/static/pages/monsterhunt/index.html
+++ b/static/pages/monsterhunt/index.html
@@ -83,7 +83,7 @@
 
         .title2{
             float: left;
-            padding-right: 10px;
+            padding-right: 3px;
             color: #0E90D2;
         }
 
@@ -95,7 +95,9 @@
         .title212{
             min-height: 22px;
             line-height: 22px;
-            width: 80px;
+            max-width: 80px;
+            min-width: 20px;
+            padding-right: 15px;
         }
 
         .title211{
@@ -184,35 +186,22 @@
         <div class="section_title">
             基本信息
             <div style="float: right;color: orange;font-size: 12px;" v-if="!!m.nickname">
-                {{m | race_display}} / {{m.generation}}代
+                {{m.nickname}} / {{m.generation}}代
             </div>
         </div>
         <div class="section_content">
-            <div class="title0" style="display: none">
-                <div class="title2">种类</div>
-                <div class="title21 title212" >
-                    {{m | race_display}}
-                </div>
-                <div class="title2">代数</div>
-                <div class="title21">
-                    {{m.generation}}
-                </div>
-                <div class="clear"></div>
-            </div>
-
-            <div class="title0">
-                <div class="clear"></div>
-            </div>
-
-
             <div class="title0">
                 <div class="title2">天赋</div>
                 <div class="title21 title212" >
                     {{m.talent | talent}}
                 </div>
                 <div class="title2">总属性</div>
-                <div class="title21">
+                <div class="title21 title212">
                     {{m | totalGenis}}
+                </div>
+                <div class="title2">妖力</div>
+                <div class="title21 title212">
+                    {{m | totalYaoLi}}
                 </div>
                 <div class="clear"></div>
             </div>
@@ -285,6 +274,9 @@
         </div>
     </div>
 
+    <div style="width: 95%; max-width: 500px;padding: 0 10px;font-size: 12px">
+        注：妖力计算为4属性加成的和*0 95^代系数。 能够直观表达妖成长的能力。
+    </div>
 
     <div class="page_footer">
         联系作者 BeeChat捉妖记交流群：萌犬骑士
@@ -368,6 +360,8 @@
         if(geneLevel === 2){return 0.4;}
         if(geneLevel === 3){return 1;}
         if(geneLevel === 4){return 2;}
+        if(geneLevel === 5){return 5;}
+        if(geneLevel === 6){return 10;}
         return 0;
     }
 
@@ -392,26 +386,8 @@
         return m[""+talent];
     }
 
-
-    Vue.filter("geneNameDisplay",function (g) {
-        var geneObj = parseGeneId(g);
-        var type = geneObj.type;
-        if(type === GENE_TYPE_strength ){return "体力";}
-        if(type === GENE_TYPE_attack){return "攻击";}
-        if(type === GENE_TYPE_defense){return "防御";}
-        if(type === GENE_TYPE_speed){return "速度";}
-        return "";
-    });
-
-    Vue.filter("geneLevelDisplay",function (g) {
-        var geneObj = parseGeneId(g);
-        var level = geneObj.level;
-        var xx = getGenePoint(level);
-        return "+" +(xx * 100 ) + " %";
-    });
-
-
-    Vue.filter('genisIncome',function (m,type,base,base_up) {
+    //预测属性加成
+    function genisIncome(m,type,base,base_up) {
         if(!m || !base){
             return 0;
         }
@@ -449,7 +425,53 @@
 
         return parseInt(base_up * xxxxx * yyyy,10);
 
+    }
+
+
+
+    Vue.filter("geneNameDisplay",function (g) {
+        var geneObj = parseGeneId(g);
+        var type = geneObj.type;
+        if(type === GENE_TYPE_strength ){return "体力";}
+        if(type === GENE_TYPE_attack){return "攻击";}
+        if(type === GENE_TYPE_defense){return "防御";}
+        if(type === GENE_TYPE_speed){return "速度";}
+        return "";
     });
+
+
+    Vue.filter("geneLevelDisplay",function (g) {
+        var geneObj = parseGeneId(g);
+        var level = geneObj.level;
+        var xx = getGenePoint(level);
+        return "+" +(xx * 100 ) + " %";
+    });
+
+
+    //计算妖力
+    Vue.filter('totalYaoLi',function (m) {
+
+        if(!m.nickname){
+            return 0;
+        }
+
+        var totalXXX= 0;
+        totalXXX+=genisIncome(m,2,m.attack,m.attack_up);
+        totalXXX+=genisIncome(m,3,m.defense,m.defense_up);
+        totalXXX+=genisIncome(m,1,m.strength,m.strength_up);
+        totalXXX+=genisIncome(m,4,m.speed,m.speed_up);
+
+        var p = getGenerateP(m.generation);
+        return (totalXXX * p).toFixed(1);
+    });
+
+
+
+    //预测属性加成
+    Vue.filter('genisIncome',function (m,type,base,base_up) {
+        return genisIncome(m,type,base,base_up);
+    });
+
 
     Vue.filter("incomeCalc",function (m,b) {
         //单倍: 总属性*倍数*0.95代数
@@ -459,22 +481,22 @@
     });
 
 
-    Vue.filter("race_display",function (d) {
-        if (!d) {
-            return "";
-        }
-
-        var race = d.race;
-        var m = {
-            "4": "鱼妖",
-            "9": "竹妖",
-        };
-
-        var nickname = d.nickname || "";
-        nickname = nickname.replace(/\d+/, "");
-
-        return m["" + race] || nickname;
-    });
+    // Vue.filter("race_display",function (d) {
+    //     if (!d) {
+    //         return "";
+    //     }
+    //
+        // var race = d.race;
+        // var m = {
+        //     "4": "鱼妖",
+        //     "9": "竹妖",
+        // };
+        //
+        // var nickname = d.nickname || "";
+        // nickname = nickname.replace(/\d+/, "");
+        //
+        // return m["" + race] || nickname;
+    // });
 
 
     Vue.filter("talent",function (d) {
