--- a/static/pages/monsterhunt/index.html
+++ b/static/pages/monsterhunt/index.html
@@ -254,6 +254,7 @@
 
             <div class="title3">-----妖币收益------</div>
 
+            <div class="title31"> 探险失败 :收益 <span class="title3133">{{m|incomeCalc(1)}} </span> 币</div>
             <div class="title31"> 废墟(1.05) :收益 <span class="title3133">{{m|incomeCalc(1.05)}} </span> 币</div>
             <div class="title31"> 洞六(1.95) :收益 <span class="title3133">{{m|incomeCalc(1.95)}} </span> 币</div>
             <div class="title31"> 山丘(3.2) :收益  <span class="title3133">{{m|incomeCalc(3.2)}}  </span> 币</div>
