--- a/static/pages/fitness/fitness.html
+++ b/static/pages/fitness/fitness.html
@@ -100,6 +100,21 @@
         </ul>
     </div>
 
+    <div class="form">
+        <div class="nickname">签到统计</div>
+        <ul style="margin-top: 5px;">
+            <% periods.forEach(function(p){ %>
+            <li>
+                <a href="/fitness/period/<%-p.id%>" class="log_link" style="width: auto;">
+                    <%-p.from_date %>
+                    <span style="color: #CCCCCC">~</span>
+                    <%-p.to_date %>
+                </a>
+            </li>
+            <% }) %>
+        </ul>
+    </div>
+
     <script src="https://cdn.ubibi.cn/static/lib/rebix/RebixUtils.min.js"></script>
     <script src="https://cdn.ubibi.cn/static/lib/jquery/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.ubibi.cn/static/lib/layer.mobile-v2.0/layer_mobile/layer.js"></script>
